<resources>
    <string name="app_name">CoursesApp</string>
    <string name="enter_text">Тысячи курсов \n в одном месте</string>
    <string name="btn_continue">Продолжить</string>
    <string name="thousand_courses">Тысячи курсов</string>
    <string name="example_gmail">example@gmail.com</string>
    <string name="enter_password">Введите пароль</string>
    <string name="login">Вход</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="without_account">Нету аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="menu_main">Главная</string>
    <string name="menu_favorite">Изрбанное</string>
    <string name="menu_account">Аккаунт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_courses">Search courses...</string>
    <string name="sort_by_date">По дате добавления</string>
    <string name="price">%s ₽</string>
    <string name="more">Подробнее</string>
</resources>