<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.OnboardingFragment">

<TextView
    android:id="@+id/tvEnterText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/roboto"
    android:text="@string/enter_text"
    android:textSize="28sp"
    app:layout_constraintBottom_toTopOf="@id/courses"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed" />

<ImageView
    android:id="@+id/courses"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/thousand_courses"
    android:src="@drawable/courses"
    app:layout_constraintBottom_toTopOf="@id/btnContinue"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tvEnterText" />

<Button
    android:id="@+id/btnContinue"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="45dp"
    android:backgroundTint="@color/light_green"
    android:text="@string/btn_continue"
    android:textColor="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>